FIX: [10.5 RC] fix min-width on header buttons to ensure they stay visible in responsive mode [t36654]
git-svn-id: http://svn.resourcespace.com/svn/rs/releases/10.5_RC@25635 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/responsive/slim-style.css
+++ b/css/responsive/slim-style.css
@@ -286,9 +286,11 @@ body {
     }
     #HeaderNav1Click {
         margin-right: 5px;
+        min-width: 30px;
     }
     #HeaderNav2Click {
         margin-right: 5px;
+        min-width: 30px;
     }
     .ResponsiveNav1Username {
         display:none !important;
@@ -418,6 +420,10 @@ body {
     }
     #HeaderImg {
         margin-left: 10px;
+    }
+
+    #HeaderNav1 li.HeaderLink.UploadButton {
+        padding-top: 10px;
     }
 }
 @media(max-width:384px) {
